# pipeline-qc

./: .gitignore  README.md  pyproject.toml
deploy/docker/: .env  deploy.sh  docker-compose.yml  update_container.sh
src/qc/: __init__.py  batch.py  errors.py  jobs.py  logging.py  pupil.py  scan.py  schemas.py  stack.py  treadmill.py  utils.py  virtual.py
